--- a/spring-hibernate-2pt2/README
+++ b/spring-hibernate-2pt2/README
@@ -1,4 +1,7 @@
+
 Assignment2 Part2
+
+images/2.directory_structure shows my directory structure
 
 The main directory for this is spring-hibernate-2pt2. 
 
@@ -27,14 +30,13 @@ application implementations
 The domain directory below contains my Author, Category and Book beans 
 spring-hibernate-2pt2/src/main/java/com/assignment2/part2/app/domain
 
-images/2.directory_structure shows my directory structure
 
 find all books without authors and categories:
 developed with createQuery(…) method
 app/FindAllWithCatAuthApp.java is the main driver class.
 dao/BookCategoryDaoImpl.findAllWithoutCatAuth() is the method responsible
 cd into spring-hibernate-2pt2 and run: mvn clean install
-once this is done, run: java -jar ./target/find-all-demo.jars
+once this is done, run: java -jar ./target/find-all-demo.jar
 images/2.find-all-books-without-authors-and-categories should show you the result of running this
 
 find all books with authors and categories:
@@ -61,12 +63,12 @@ app/FindBooksByAuthIdApp.java is the main driver class
 dao/BookCategoryDaoImpl.findAllWithCatAuthMultBookPerAuthId() is the method responsible, I chose author.id = 2, or J.K. Rowling as my author since the Book table contains more than 1 of her books
 domain/Book.java hosts the query that grabs the data
 cd into spring-hibernate-2pt2 and run: mvn clean install
-once this is done, run:
+once this is done, run: java -jar ./target/find-book-by-auth-id.jar
 images/2.find-book-by-auth-id should show you the result of running this
 
 Create a new book with a new author(s) not persisted yet in your database. 
 InsertBookWithNewAuthApp.java is the main driver class
-dao/BookCategoryDaoImplsaveWithNewAuth() is the method responsible
+dao/BookCategoryDaoImpl.saveWithNewAuth() is the method responsible
 cd into spring-hibernate-2pt2 and run: mvn clean install
 once this is done, run: java -jar ./target/insert-book.jar
 images/2.insert-book should show you the result of running this, you can see the new book "of mice and men" and new author "john steinbeck" listed
@@ -77,7 +79,7 @@ DeleteBookAndAuthApp.java is the main driver class
 dao/BookCategoryDaoImpl.Delete() is the method responsible
 cd into spring-hibernate-2pt2 and run: mvn clean install
 once this is done, run: java -jar ./target/delete-book.jar
-images/2.delete should show you the result of running this, as you can see, the new book "of mice and men" and new author "john steinbeck" is no longer listed
+images/2.delete should show you the result of running this, as you can see, the new book "of mice and men" and new author "john steinbeck" is no longer listed. Note: you may need to change the book id passed in the main class to make sure the correct book is deleted, but it should already be set up properly
 images/2.tables-after-delete shows the tables after the new book and author have been deleted
 
 
