--- a/spring-mvc/src/main/webapp/WEB-INF/i18n/messages_zh_HK.properties
+++ b/spring-mvc/src/main/webapp/WEB-INF/i18n/messages_zh_HK.properties
@@ -1,16 +1,13 @@
-welcome_titlepane=Welcome to {0}
-welcome_h3=Welcome to {0}
+welcome_titlepane=Bienvenidos a {0}
+welcome_h3=Bienvenidos a  {0}
 
-Book_save_success=Libro salvado
-Book_save_fail=Libro no salvado
+book_save_success=Libro salvado
+book_save_fail=Libro no salvado
 
 validation.categoryname.NotBlank.message=Nombre de categoria es necesario
 validation.isbn.NotBlank.message=ISBN es necesario
 validation.title.NotBlank.message=Titulo es necesario
 validation.publisher.NotBlank.message=Editor es necesario
-validation.categoryname.Size.message=Nombre de categoria debe estar entre {min} y {max}
-validation.isbn.Size.message=ISBN debe estar entre {min} y {max}
-validation.title.Size.message=Titulo debe estar entre {min} y {max}
-validation.publisher.Size.message=Editor debe estar entre {min} y {max}
+validation.price.NotNull.message=Precio no puede ser null
 
-message_login_fail=Error de inicio de sesion, por favor intentalo de nuevo
+#message_login_fail=Error de inicio de sesion, por favor intentalo de nuevo
