--- a/spring-mvc/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/spring-mvc/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -7,10 +7,6 @@ book_save_fail=Failed saving book
 validation.categoryname.NotBlank.message=Category name is required
 validation.isbn.NotBlank.message=ISBN is required
 validation.title.NotBlank.message=Title is required
-validation.publisher.NotBlank.message=Publisher is required
-validation.categoryname.Size.message=Category name must be between {min} and {max}
-validation.isbn.Size.message=ISBN must be between {min} and {max}
-validation.title.Size.message=Title must be between {min} and {max}
-validation.publisher.Size.message=Publisher must be between {min} and {max}
+validation.price.NotNull.message=Price may not be null
 
-message_login_fail=Login failed, please try again
+#message_login_fail=Login failed, please try again
